syntax = "proto3";

package protocol;

option go_package = "v2ray.com/core/common/protocol";

message GeoSiteList {
  repeated GeoSite entry = 1;
}

message GeoSite {
  string country_code = 1;
  repeated Domain domain = 2;
}

message Domain {
  enum Type {
    RootDomain = 0;
    Domain = 1;
    Plain = 2;
    Regex = 3;
  }
  Type type = 1;
  string value = 2;
}
